tests/internal/negative_case/bad_break_outside_loop_or_switch.c
// Expected: compile fail (break outside loop/switch)
int main() {
  break;
  return 0;
}
